--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <!-- navbar -->
-    <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-trnsparent navbarScroll">
+    <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-trnsparent">
         <div class="container">
             <a class="navbar-brand name" href="#home">DSK</a>
             <button class="navbar-toggler bg-warning" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -170,7 +170,7 @@
         <div class="container pt-5 pb-5">
             <h1 class="text-left title">Portfolio:</h1>
             <div class="row">
-                <div class="col-lg-3 mt-4">
+                <div class="col-6 col-lg-3 mt-4">
                     <div class="card">
                         <img class="card-img-top" src="https://res.cloudinary.com/dwiaeepef/image/upload/v1689513013/kenny-eliason-Wp7t4cWN-68-unsplash_wwhjgr.jpg" alt="Card image" style="width:100%">
                         <div class="card-body text-center">
@@ -179,7 +179,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 mt-4">
+                <div class="col-6 col-lg-3 mt-4">
                     <div class="card portfolioContent">
                         <img class="card-img-top" src="https://res.cloudinary.com/dwiaeepef/image/upload/v1691674921/roman-skrypnyk-DEga33BYvmA-unsplash_inmnxh.jpg" alt="Card image" style="width:100%">
                         <div class="card-body text-center">
@@ -188,7 +188,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 mt-4">
+                <div class="col-6 col-lg-3 mt-4">
                     <div class="card portfolioContent">
                         <img class="card-img-top" src="https://res.cloudinary.com/dwiaeepef/image/upload/v1691675035/surja-sen-das-raj-y16ku6si6xI-unsplash_gusm0p.jpg" alt="Card image" style="width:100%">
                         <div class="card-body text-center">
@@ -197,14 +197,15 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 mt-4">
+                <div class="col-6 col-lg-3 mt-4">
                     <div class="card portfolioContent">
-                        <img class="card-img-top" src="https://res.cloudinary.com/dwiaeepef/image/upload/v1691675278/domingo-alvarez-e-Cs3y8Mn6-Gk-unsplash_bp1yfm.jpg" alt="Card image" style="width:100%">
+                        <img class="card-img-top pb-5 pt-5 p-3" src="https://res.cloudinary.com/dwiaeepef/image/upload/v1693233125/Screenshot_2023-08-28_200118_y30rm1.png" alt="Card image" style="width:100%">
                         <div class="card-body text-center">
-                            <h4 class="card-title">Emoji Game App</h4>
-                            <a href="https://dskemoji.ccbp.tech/" class="btn btn-info">View Project</a>  
+                            <h4 class="card-title pt-3">Nxt Watch App</h4>
+                            <a href="https://dsknxtwatch.ccbp.tech/" class="btn btn-info">View Project</a>
                         </div>
                     </div>
+                </div>
                 </div>
             </div>
             </section>
@@ -216,7 +217,7 @@
                 <div class="contact-container">
                     <div class="social-icons">
                         <a href="https://www.linkedin.com/feed/" target="_blank"><i class="fab fa-linkedin"></i></a>
-                        <a href="#" target="_blank"><i class="fas fa-envelope icon"></i></a>
+                        <a><i class="fas fa-envelope icon"></i></a>
                     </div>
                     <!-- form fields -->
                     <form>
