--- a/index.html
+++ b/index.html
@@ -181,10 +181,10 @@
                 </div>
                 <div class="col-6 col-lg-3 mt-4">
                     <div class="card portfolioContent">
-                        <img class="card-img-top" src="https://res.cloudinary.com/dwiaeepef/image/upload/v1691674921/roman-skrypnyk-DEga33BYvmA-unsplash_inmnxh.jpg" alt="Card image" style="width:100%">
+                        <img class="card-img-top pb-3 pt-5 p-2" src="https://res.cloudinary.com/dwiaeepef/image/upload/v1693239127/Screenshot_2023-08-28_214016_cgrros.png" alt="Card image" style="width:100%">
                         <div class="card-body text-center">
-                            <h4 class="card-title">Calculator App</h4>
-                            <a href="https://dskcalculator.ccbp.tech/" class="btn btn-info">View Project</a>
+                            <h4 class="card-title pt-3">Jobby App</h4>
+                            <a href="https://dskjobby.ccbp.tech" class="btn btn-info">View Project</a>
                         </div>
                     </div>
                 </div>
